Bug 591881 - Suspend pruning of idle connections when possible. r=dwitte a=blocking-fennec